--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "dev": "node --watch app.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "bcrypt": "5.1.1",
     "express": "4.18.2",
-    "mongoose": "^8.0.3"
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "dotenv": "^16.3.1",
     "standard": "^17.1.0"
   },
   "eslintConfig": {
