--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   },
   "dependencies": {
     "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
     "express": "4.18.2",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "8.0.3"
+    "mongoose": "8.0.3",
+    "morgan": "1.10.0",
+    "socket.io": "4.7.4",
+    "ws": "8.16.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/swagger-ui-express": "^4.1.6",
     "dotenv": "^16.3.1",
     "standard": "^17.1.0"
   },
