--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.0.3",
     "morgan": "1.10.0",
-    "socket.io": "4.7.4",
-    "ws": "8.16.0"
+    "socket.io": "4.7.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
