--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.0.3",
     "morgan": "1.10.0",
+    "resend": "3.2.0",
     "socket.io": "4.7.4"
   },
   "devDependencies": {
