--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/swagger-ui-express": "^4.1.6",
     "dotenv": "^16.4.5",
-    "standard": "^17.1.0"
+    "jest": "^29.7.0",
+    "standard": "^17.1.0",
+    "supertest": "^6.3.4"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
