--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node -r dotenv/config --watch app.js"
+    "dev": "set NODE_ENV=DEVELOPMENT && node -r dotenv/config --watch app.js",
+    "prod": "set NODE_ENV=PRODUCTION && node app.js"
   },
   "dependencies": {
     "bcrypt": "5.1.1",
